--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ span.wave {
 </article>
 <hr>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
-<ul>
+<ul class="staff-list">
 <li class="staff">
 	<div class="staff-details">
 	<ul class="staff-info">
@@ -564,7 +564,9 @@ span.wave {
 				</li>
 			</div>
 </ul>
-	<h2>Daftar Rental Mobil Jogja</h2>
+</article>
+<article class="content" data-cms-content-wrapper="/_layouts/page.html">
+<h2>Daftar Rental Mobil Jogja</h2>
 <ul class="staff-list">
 <li class="staff">
 <div class="staff-details">
