--- a/index.html
+++ b/index.html
@@ -423,7 +423,8 @@ span.wave {
 		</blockquote>             
 </div>
 </article>
-<article class="content" data-cms-content-wrapper="/_layouts/page.html">
+				</hr>
+				<article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <ul>
 <li class="staff">
 	<div class="staff-details">
@@ -431,7 +432,7 @@ span.wave {
 
 					<li><b>HONDA BEAT STREET NEW</b></li>
 
-					<li><p style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</p></li>
+					<li><h5 style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</h5></li>
 
 				</ul>
 
@@ -454,7 +455,7 @@ span.wave {
 
 					<li><b>HONDA GENIO NEW</b></li>
 
-					<li><p style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</p></li>
+					<li><h5 style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</h5></li>
 
 				</ul>
 
@@ -473,7 +474,7 @@ span.wave {
 <div class="staff-details">
 <ul class="staff-info">
 <li><b>Honda Beat</b></li>
-<li><p style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</p></li>
+<li><h5 style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</h5></li>
 
 				</ul>
 
@@ -498,7 +499,7 @@ span.wave {
 
 					<li><b>Honda Scoopy</b></li>
 
-					<li><p style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</p></li>
+					<li><h5 style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</h5></li>
 
 				</ul>
 
@@ -521,7 +522,7 @@ span.wave {
 
 					<li><b>Honda Vario 150</b></li>
 
-					<li><p style="color:red">100Rb/hari•200Rb/2hari•290Rb/3hari</p></li>
+					<li><h5 style="color:red">100Rb/hari•200Rb/2hari•290Rb/3hari</h5></li>
 
 				</ul>
 
@@ -546,7 +547,7 @@ span.wave {
 
 					<li><b>Honda Vario 125</b></li>
 
-					<li><p style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</p></li>
+					<li><h5 style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</h5></li>
 
 				</ul>
 
