--- a/index.html
+++ b/index.html
@@ -425,6 +425,124 @@ span.wave {
 </article>
 				<hr>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
+				<h2>Daftar Rental Mobil Jogja</h2>
+<ul class="staff-list">
+<li class="staff">
+<div class="staff-details">
+<ul class="staff-info">
+                <li><h3>All New Avanza Automatic</h3></li>
+<li><p style="color:red">300k / hari (Lepas Kunci)</p></li>
+</ul>
+</div>
+
+
+<div class="staff-bio">
+<p><blockquote>
+  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m1.webp?&v2" alt="" width="650" height="450" /></p>
+</blockquote>
+
+
+</p>
+
+
+<h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
+
+<ul>
+  <li>
+    <h4 id="12-jam-275-ribu">•12 Jam 250 ribu</h4>
+  </li>
+  <li>
+    <h4 id="24-jam-325-ribu">•24 Jam 300 ribu</h4>
+  </li>
+</ul>
+
+
+<h4 id="mobil--driver">Mobil + Driver</h4>
+
+
+<ul>
+  <li>
+    <h4 id="10-jam-375-ribu">•10 Jam 350 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-450-ribu">•Per Hari 425 ribu</h4>
+  </li>
+</ul>
+
+
+<h4 id="mobil--driver--bbm">Mobil + Driver + BBM</h4>
+
+
+<ul>
+  <li>
+    <h4 id="10-jam-500-ribu">•10 Jam 475 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-550-ribu">•Per Hari 525 ribu</h4>
+  </li>
+</ul>
+<p></p>
+</div>
+</li>
+<li class="staff">
+<div class="staff-details">
+<ul class="staff-info">
+<li><h3>All New Avanza Manual</h3></li>
+<li><p style="color:red">275K / hari (Lepas Kunci)</p></li>
+</ul>
+</div>
+
+
+<div class="staff-bio">
+<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp?&v2" alt="" width="650" height="450" /></p>
+
+
+
+<h4 id="lepas-kunci--">LEPAS KUNCI</h4>
+
+
+<ul>
+  <li>
+    <h4 id="12-jam-250-ribu">•12 Jam 225 ribu</h4>
+  </li>
+  <li>
+    <h4 id="24-jam-300-ribu">•24 Jam 275 ribu</h4>
+  </li>
+</ul>
+
+
+<h4 id="mobil--driver--">Mobil + Driver    </h4>
+
+
+<ul>
+  <li>
+    <h4 id="10-jam-350-ribu">•10 Jam 325 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-450-ribu">•Per Hari 425 ribu</h4>
+  </li>
+</ul>
+
+
+<h4 id="mobil--driver--bbm--">Mobil + Driver + BBM    </h4>
+
+
+<ul>
+  <li>
+    <h4 id="10-jam-450-ribu">•10 Jam 425 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-550-ribu">•Per Hari 525 ribu</h4>
+  </li>
+</ul>
+<p></p>
+</div>
+</li>
+			</ul>
+	</article>
+<hr>
+<article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <ul>
 <li class="staff">
 <div class="staff-details">
