--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ span.wave {
 <div class="staff-details">
 <ul class="staff-info">
                 <li><h3>All New Avanza Automatic</h3></li>
-<li><p style="color:red">300k / hari (Lepas Kunci)</p></li>
+<li><p style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</p></li>
 </ul>
 </div>
 
@@ -448,7 +448,7 @@ span.wave {
 <div class="staff-details">
 <ul class="staff-info">
 <li><h3>All New Avanza Manual</h3></li>
-<li><p style="color:red">275K / hari (Lepas Kunci)</p></li>
+<li><p style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</p></li>
 </ul>
 </div>
 
