--- a/index.html
+++ b/index.html
@@ -462,7 +462,8 @@ span.wave {
 	</article>
 <hr>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
-<ul>
+<h2>Daftar Sewa Motor Jogja</h2>
+	<ul class="staff-list">
 <li class="staff">
 <div class="staff-details">
 <ul class="staff-info">
