--- a/index.html
+++ b/index.html
@@ -425,21 +425,18 @@ span.wave {
 </article>
 				<hr>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
-				<h2>Daftar Rental Mobil Jogja</h2>
+				<h2>Daftar Sewa Motor Jogja</h2>
 <ul class="staff-list">
 <li class="staff">
 <div class="staff-details">
 <ul class="staff-info">
-                <li><h3>All New Avanza Automatic</h3></li>
+                <li><h3>Honda Beat Street</h3></li>
 <li><p style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</p></li>
 </ul>
 </div>
-
-
 <div class="staff-bio">
-<p><blockquote>
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m1.webp?&v2" alt="" width="650" height="450" /></p>
-</blockquote>
+<p>
+<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/beat-trail.jpg?func=crop&w=200&h=200&v2"></p>
 </p>
 <p></p>
 </div>
@@ -447,18 +444,17 @@ span.wave {
 <li class="staff">
 <div class="staff-details">
 <ul class="staff-info">
-<li><h3>All New Avanza Manual</h3></li>
-<li><p style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</p></li>
+<li><h3>Honda Genio</h3></li>
+<li><p style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</p></li>
 </ul>
 </div>
-
-
 <div class="staff-bio">
-<p></p><p><img src="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/m3.webp?&v2" alt="" width="650" height="450" /></p>
+<p></p>
+<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/genio.jpg?func=crop&w=200&h=200&v2"></p>
 <p></p>
 </div>
 </li>
-			</ul>
+</ul>
 	</article>
 <hr>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
