--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ span.wave {
 <div class="staff-details">
 <ul class="staff-info">
                 <li><h3>Honda Beat Street</h3></li>
-<li><p style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</p></li>
+<li><h5 style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</h5></li>
 </ul>
 </div>
 <div class="staff-bio">
@@ -445,107 +445,70 @@ span.wave {
 <div class="staff-details">
 <ul class="staff-info">
 <li><h3>Honda Genio</h3></li>
-<li><p style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</p></li>
-</ul>
-</div>
-<div class="staff-bio">
-<p></p>
-<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/genio.jpg?func=crop&w=200&h=200&v2"></p>
-<p></p>
-</div>
-</li>
-</ul>
-	</article>
-<hr>
-<article class="content" data-cms-content-wrapper="/_layouts/page.html">
-<h2>Daftar Sewa Motor Jogja</h2>
-	<ul class="staff-list">
-<li class="staff">
-<div class="staff-details">
-<ul class="staff-info">
-<li><b>HONDA BEAT STREET NEW</b></li>
-<li><h5 style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</h5></li>
-</ul>
-</div>
-<div class="staff-bio">
-<p><blockquote>
-<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/beat-trail.jpg?func=crop&w=200&h=200&v2"></p>
-</blockquote>
-<p></p>
-</li>
-</div>
-<li class="staff">
-<div class="staff-details">
-<ul class="staff-info">
-<li><b>HONDA GENIO NEW</b></li>
 <li><h5 style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</h5></li>
 </ul>
 </div>
 <div class="staff-bio">
-<p><blockquote>
-<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/genio.jpg?func=crop&w=200&h=200&v2"></p>
-</blockquote>
 <p></p>
-</li>
+<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/genio.jpg?func=crop&w=200&h=200&v2"></p>
+<p></p>
 </div>
+</li>
 <li class="staff">
 <div class="staff-details">
 <ul class="staff-info">
-<li><b>Honda Beat</b></li>
+<li><h3>Honda Beat</h3></li>
 <li><h5 style="color:red">70Rb/hari•140Rb/2hari•200Rb/3hari</h5></li>
 </ul>
 </div>
 <div class="staff-bio">
-<p><blockquote>
+<p></p>
 <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/fjimg-20191224-145508.png?func=crop&w=200&h=200&v2"></p>
-</blockquote>
 <p></p>
-</li>
 </div>
+</li>
 <li class="staff">
 <div class="staff-details">
 <ul class="staff-info">
-<li><b>Honda Scoopy</b></li>
+<li><h3>Honda Scoopy</h3></li>
 <li><h5 style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</h5></li>
 </ul>
 </div>
 <div class="staff-bio">
-<p><blockquote>
-<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/scoopy.jpg?func=crop&w=200&h=200&v2"></p>
-</blockquote>
 <p></p>
-</li>
+<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/scoopy.jpg?func=crop&w=200&h=200&v2"></p>
+<p></p>
 </div>
+</li>
 <li class="staff">
 <div class="staff-details">
 <ul class="staff-info">
-<li><b>Honda Vario 150</b></li>
+<li><h3>Honda Vario 150</h3></li>
 <li><h5 style="color:red">100Rb/hari•200Rb/2hari•290Rb/3hari</h5></li>
 </ul>
 </div>
 <div class="staff-bio">
-<p><blockquote>
-<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
-</blockquote>
 <p></p>
-</li>
+<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
+<p></p>
 </div>
+</li>
 <li class="staff">
 <div class="staff-details">
 <ul class="staff-info">
-<li><b>Honda Vario 125</b></li>
+<li><h3>Honda Vario 125</h3></li>
 <li><h5 style="color:red">80Rb/hari•160Rb/2hari•230Rb/3hari</h5></li>
 </ul>
 </div>
 <div class="staff-bio">
-<p><blockquote>
-<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
-</blockquote>
 <p></p>
-</li>
+<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
+<p></p>
 </div>
-</ul>
-</article>
+</li>				
+				</ul>
+	</article>
+<hr>
 <hr>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <h2>Daftar Rental Mobil Jogja</h2>
