--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -519,7 +519,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
     <h4 id="dapur-dengan-peralatan-dapur-yang-lengkap">•Dapur Dengan Peralatan Dapur Yang Lengkap</h4>
   </li>
   <li>
-    <h4 id="garasi">Garasi</h4>
+    <h4 id="garasi">•Garasi</h4>
   </li>
 </ul>
 <p></p>
