--- a/index.html
+++ b/index.html
@@ -757,12 +757,18 @@ span.wave {
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">•12 Jam 200 ribu</h4>
+    <h4 id="12-jam-250-ribu">•12 Jam 200 ribu(MT)</h4>
   </li>
-  <li>
-    <h4 id="24-jam-300-ribu">•24 Jam 250 ribu</h4>
+ <li>
+    <h4 id="12-jam-250-ribu">•12 Jam 225 ribu(AT)</h4>
   </li>
-</ul>
+	<li>
+    <h4 id="24-jam-300-ribu">•24 Jam 250 ribu(MT)</h4>
+  </li>
+<li>
+    <h4 id="24-jam-300-ribu">•24 Jam 275 ribu(AT)</h4>
+  </li>
+			</ul>
 
 
 <h4 id="mobil--driver">Mobil + Driver</h4>
