--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -727,15 +727,21 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 <h4 id="lepas-kunci">LEPAS KUNCI</h4>
 
 
+
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">•12 Jam 200 ribu</h4>
+    <h4 id="12-jam-250-ribu">•12 Jam 200 ribu(MT)</h4>
   </li>
-  <li>
-    <h4 id="24-jam-300-ribu">•24 Jam 250 ribu</h4>
+ <li>
+    <h4 id="12-jam-250-ribu">•12 Jam 225 ribu(AT)</h4>
   </li>
-</ul>
-
+	<li>
+    <h4 id="24-jam-300-ribu">•24 Jam 250 ribu(MT)</h4>
+  </li>
+<li>
+    <h4 id="24-jam-300-ribu">•24 Jam 275 ribu(AT)</h4>
+  </li>
+			</ul>
 
 <h4 id="mobil--driver">Mobil + Driver</h4>
 
