--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -550,7 +550,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
     <h4 id="fasilitas--ac-tv-bed-free-wifi-coffe-kamar-mandi-dalam-air-panas">•Fasilitas : AC, TV, Bed, Free Wifi, Coffe, Kamar Mandi Dalam (Air Panas)</h4>
   </li>
   <li>
-    <h4 id="extra-bedperson--rp-25000--malam">•Extra Bed/person : Rp. 25.000 / Malam</h4>
+    <h4 id="extra-bedperson--rp-25000--malam">•Extra Bed/person : Rp 50.000 / Malam</h4>
   </li>
   <li>
     <h4 id="extra-time--rp-15000-per-jam-selama-persediaan-kamar-masih-ada">•Extra Time : Rp. 15.000 per jam (selama persediaan kamar masih ada)</h4>
@@ -587,7 +587,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
     <h4 id="fasilitas--ac-tv-bed-free-wifi-coffe-kamar-mandi-luar">•Fasilitas : AC, TV, Bed, Free Wifi, Coffe, Kamar Mandi Luar</h4>
   </li>
   <li>
-    <h4 id="extra-bedperson--rp-25000--malam">•Extra Bed/person : Rp. 25.000 / Malam</h4>
+    <h4 id="extra-bedperson--rp-25000--malam">•Extra Bed/person : Rp 50.000 / Malam</h4>
   </li>
   <li>
     <h4 id="extra-time--rp-15000-per-jam-selama-persediaan-kamar-masih-ada">•Extra Time : Rp. 15.000 per jam (selama persediaan kamar masih ada)</h4>
