--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -571,8 +571,8 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 
 
 <div class="staff-bio">
-<p><blockquote>
-  <p<p style="text-align:center"><img class="center" src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a8a3a357f-e1561076685884.jpg?func=crop&w=150&h=113&v2" alt="kamar standar"></p>
+<p><blockquote></p>
+  <p style="text-align:center"><img class="center" src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a8a3a357f-e1561076685884.jpg?func=crop&w=150&h=113&v2" alt="kamar standar"></p>
 </blockquote>
 
 
