--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -403,7 +403,7 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 				<p><blockquote>
 
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/beat-trail.jpg?func=crop&w=200&h=200&v2"></p>
+  </p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/beat-trail.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
 
@@ -461,7 +461,7 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 				<p><blockquote>
 
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/genio.jpg?func=crop&w=200&h=200&v2"></p>
+  </p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/genio.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
 
@@ -519,7 +519,7 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 				<p><blockquote>
 
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/fjimg-20191224-145508.png?func=crop&w=200&h=200&v2"></p>
+  </p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/fjimg-20191224-145508.png?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
 
@@ -577,7 +577,7 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 				<p><blockquote>
 
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/scoopy.jpg?func=crop&w=200&h=200&v2"></p>
+  </p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/scoopy.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
 
@@ -636,7 +636,7 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 				<p><blockquote>
 
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
+  </p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
 
@@ -690,7 +690,7 @@ Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga s
 
 				<p><blockquote>
 
-  <p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
+  </p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
 
 </blockquote>
 
