--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ span.wave {
 </div>
 <div class="staff-bio">
 <p>
-<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/beat-trail.jpg?func=crop&w=200&h=200&v2"></p>
+<p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/beat-trail.jpg?func=crop&w=200&h=200&v2"></p>
 </p>
 <p></p>
 </div>
