--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ span.wave {
 </div>
 <div class="staff-bio">
 <p></p>
-<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/genio.jpg?func=crop&w=200&h=200&v2"></p>
+<p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/genio.jpg?func=crop&w=200&h=200&v2"></p>
 <p></p>
 </div>
 </li>
@@ -462,7 +462,7 @@ span.wave {
 </div>
 <div class="staff-bio">
 <p></p>
-<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/fjimg-20191224-145508.png?func=crop&w=200&h=200&v2"></p>
+<p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/fjimg-20191224-145508.png?func=crop&w=200&h=200&v2"></p>
 <p></p>
 </div>
 </li>
@@ -475,7 +475,7 @@ span.wave {
 </div>
 <div class="staff-bio">
 <p></p>
-<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/scoopy.jpg?func=crop&w=200&h=200&v2"></p>
+<p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/scoopy.jpg?func=crop&w=200&h=200&v2"></p>
 <p></p>
 </div>
 </li>
@@ -488,7 +488,7 @@ span.wave {
 </div>
 <div class="staff-bio">
 <p></p>
-<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
+<p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
 <p></p>
 </div>
 </li>
@@ -501,7 +501,7 @@ span.wave {
 </div>
 <div class="staff-bio">
 <p></p>
-<p><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
+<p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/vario.jpg?func=crop&w=200&h=200&v2"></p>
 <p></p>
 </div>
 </li>				
