--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -366,13 +366,13 @@ a:focus::before, a:hover::before, a:focus::after, a:hover::after {
     
 		<ul>
   <li>
-    <a href="#" data-text="Works">Home</a>
+    <a href="/" data-text="Utama">Home</a>
   </li>
   <li>
-    <a href="#" data-text="About Me">About Me</a>
+    <a href="#" data-text="Sewa Motor">Rental Motor</a>
   </li>
   <li>
-    <a href="#" data-text="Resume">Resume</a>
+    <a href="#" data-text="Rental">Resume</a>
   </li>
   <li>
     <a href="#" data-text="Contact">Contact</a>
