--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -285,12 +285,13 @@ span.wave {
    50% { transform: rotate(  0.0deg) }
   100% { transform: rotate(  0.0deg) }
 }
-
+</style>
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192" />
                 <link rel="icon" type="image/png" href="/favicon.png" />
 
 <!--Do not alter or remove this code! Data Member=https://beningabaditransport.com tracker ID = SNVVZQQ0  --!> <a href="https://official.my/addurl.php" id="SNVVZQQ0"> </a> <!--End Official Free Search Engine Submission tracker code--!>
+<style>
 body {
   margin: 0;
   font-family: Helvetica, Arial, sans-serif;
