--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -101,7 +101,7 @@ header .container { text-align: center; }
   header.main-hero { height: 80vh; background-position: calc(10% - 3px) calc(80% + 10px); }
   header .container { text-align: left; } }
 
-header nav { max-width: 100%; }
+header nav { max-width: 50%; }
 
 header nav ul { list-style: circle; margin: 0; padding: 0; }
 
@@ -373,7 +373,7 @@ a:focus::before, a:hover::before, a:focus::after, a:hover::after {
     <a href="#" data-text="Sewa Motor">Rental Motor</a>
   </li>
   <li>
-    <a href="#" data-text="Rental">Resume</a>
+    <a href="#" data-text="Rental Mobil">Resume</a>
   </li>
   <li>
     <a href="#" data-text="Contact">Contact</a>
