--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -373,7 +373,7 @@ a:focus::before, a:hover::before, a:focus::after, a:hover::after {
     <a href="#" data-text="Sewa Motor">Rental Motor</a>
   </li>
   <li>
-    <a href="#" data-text="Rental Mobil">Resume</a>
+    <a href="#" data-text="Rental Mobil">Sewa Mobil</a>
   </li>
   <li>
     <a href="#" data-text="Contact">Contact</a>
