--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -370,10 +370,10 @@ a:focus::before, a:hover::before, a:focus::after, a:hover::after {
     <a href="/" data-text="Utama">Home</a>
   </li>
   <li>
-    <a href="#" data-text="Sewa Motor">Rental Motor</a>
+    <a href="#" data-text="Sewa Motor">Sewa Motor</a>
   </li>
   <li>
-    <a href="#" data-text="Rental Mobil">Sewa Mobil</a>
+    <a href="#" data-text="Rental Mobil">Rental Mobil</a>
   </li>
   <li>
     <a href="#" data-text="Contact">Contact</a>
