--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -361,7 +361,7 @@ a:focus::before, a:hover::before, a:focus::after, a:hover::after {
     
 		<ul>
   <li>
-    <a href="/" data-text="Utama">Home</a>
+    <a href="/" data-text="Home">Home</a>
   </li>
   <li>
     <a href="#" data-text="Sewa Motor">Sewa Motor</a>
@@ -370,7 +370,7 @@ a:focus::before, a:hover::before, a:focus::after, a:hover::after {
     <a href="#" data-text="Rental Mobil">Rental Mobil</a>
   </li>
   <li>
-    <a href="#" data-text="Contact">Contact</a>
+    <a href="#" data-text="Penginapan">Penginapan</a>
   </li>
 </ul>
 	
