--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -292,6 +292,13 @@ span.wave {
 
 <!--Do not alter or remove this code! Data Member=https://beningabaditransport.com tracker ID = SNVVZQQ0  --!> <a href="https://official.my/addurl.php" id="SNVVZQQ0"> </a> <!--End Official Free Search Engine Submission tracker code--!>
 <style>
+body {
+  margin: 0;
+  font-family: Helvetica, Arial, sans-serif;
+
+  font-size: 1em;
+}
+
 ul {
   display: table;
   white-space: nowrap;
