--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -295,7 +295,7 @@ span.wave {
 body {
   margin: 0;
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 1em;
+  font-size: 1.5em;
 }
 
 ul {
@@ -361,7 +361,7 @@ a:focus::before, a:hover::before, a:focus::after, a:hover::after {
 </head>
 <body>
 		
-	
+	<nav>
 	
     
 		<ul>
@@ -375,7 +375,7 @@ a:focus::before, a:hover::before, a:focus::after, a:hover::after {
     <a href="#" data-text="Rental Mobil">Rental Mobil</a>
   </li>
 </ul>
-	
+	</nav>
 
 		<section class="main">
 			<div class="container" data-cms-content-wrapper="/_layouts/default.html">
