--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -268,7 +268,7 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 /*# sourceMappingURL=main.css.map */
  
 nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
-nav a {display:inline-block; text-decoration:none; padding:2px; color:#444; letter-spacing:1px; font-size:.5em; text-shadow:0px 0px 0px #aaa} nav a.active {color:red} nav a:hover {color:#000}
+nav a {display:inline-block; text-decoration:none; padding:2px; color:#444; letter-spacing:1px; font-size:1em; text-shadow:0px 0px 0px #aaa} nav a.active {color:red} nav a:hover {color:#000}
 span.wave {
   animation-name: wave-animation;
   animation-duration: 2.5s;
