--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -295,7 +295,7 @@ span.wave {
 body {
   margin: 0;
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 1.5em;
+  font-size: .9em;
 }
 
 ul {
@@ -314,7 +314,7 @@ a {
   text-decoration: none;
   color: rgba(255,255,255,1);
   position: relative;
-  padding: 2px 0px;
+  padding: 1px 0px;
   border-top: 1px solid rgba(255,255,255,0);
   border-bottom: 1px solid rgba(255,255,255,0);
   transition: padding .3s,border-color .3s;
