--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -103,9 +103,9 @@ header .container { text-align: center; }
 
 header nav { max-width: 100%; }
 
-header nav ul { list-style: circle; margin: 0; padding: 0; }
+header nav ul { list-style: circle; margin: 0; padding: 0 1px; }
 
-header nav ul li { display: inline-block; margin: 0; }
+header nav ul li { display: inline-block; margin: 0 1px; }
 
 header a, footer a { color: #3a4145; }
 
