--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -295,7 +295,7 @@ span.wave {
 body {
   margin: 0;
   font-family: Helvetica, Arial, sans-serif;
-  font-size: .9em;
+  font-size: 1.2em;
 }
 
 ul {
