--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -368,10 +368,13 @@ a:focus::before, a:hover::before, a:focus::after, a:hover::after {
     <a href="/" data-text="Home">Home</a>
   </li>
   <li>
-    <a href="#" data-text="SewaMotor">SewaMotor</a>
+    <a href="/sewa-motor" data-text="SewaMotor">SewaMotor</a>
   </li>
   <li>
-    <a href="#" data-text="RentalMobil">RentalMobil</a>
+    <a href="/rental-mobil" data-text="RentalMobil">RentalMobil</a>
+  </li>
+<li>
+    <a href="/penginapan" data-text="Penginapan">Penginapan</a>
   </li>
 </ul>
 	</nav>
