--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -485,7 +485,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 
 
 <div class="staff-bio">
-<p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5a4df3448bb6d-1-650x450.jpg?func=crop&w=320&h=240&v2"></p>
+<p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdepan.jpg?func=crop&w=320&h=240&v2"></p>
 
 
 <p><strong>Harga Sewa 1 Rumah 2 Lantai : 700.000/malam (maximal 10 orang)</strong></p>
