--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -485,13 +485,14 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 
 
 <div class="staff-bio">
+<div class="testimonials">
 <p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdepan.jpg?func=crop&w=320&h=240&v2"></p>
 <p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghtamu.jpg?func=crop&w=320&h=240&v2"></p>
 <p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkluarga.jpg?func=crop&w=320&h=240&v2"></p>
 <p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar.jpg?func=crop&w=320&h=240&v2"></p>
 <p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar2.jpg?func=crop&w=320&h=240&v2"></p>
 <p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdapur.jpg?func=crop&w=320&h=240&v2"></p>
-
+</div>
 
 
 
