--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -482,10 +482,9 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 <li><p style="color:red">700 Ribu Per Malam</p></li>
 </ul>
 </div>
+<div class="staff-bio">
 
-
-
-<div class="testimonials">
+<div>
 <p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdepan.jpg?func=crop&w=320&h=240&v2"></p>
 <p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghtamu.jpg?func=crop&w=320&h=240&v2"></p>
 <p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkluarga.jpg?func=crop&w=320&h=240&v2"></p>
@@ -493,7 +492,6 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 <p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar2.jpg?func=crop&w=320&h=240&v2"></p>
 <p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdapur.jpg?func=crop&w=320&h=240&v2"></p>
 </div>
-<div class="staff-bio">
 
 
 
