--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -483,20 +483,20 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 </ul>
 </div>
 <div class="staff-bio">
-
-<div>
-<p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdepan.jpg?func=crop&w=320&h=240&v2"></p>
-<p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghtamu.jpg?func=crop&w=320&h=240&v2"></p>
-<p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkluarga.jpg?func=crop&w=320&h=240&v2"></p>
-<p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar.jpg?func=crop&w=320&h=240&v2"></p>
-<p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar2.jpg?func=crop&w=320&h=240&v2"></p>
-<p></p><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdapur.jpg?func=crop&w=320&h=240&v2"></p>
+<table>
+<tr>
+<td><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdepan.jpg?func=crop&w=320&h=240&v2"></p></td>
+<td><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghtamu.jpg?func=crop&w=320&h=240&v2"></p></td>
+</tr>
+<tr>																		  
+<td><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkluarga.jpg?func=crop&w=320&h=240&v2"></p></td>
+<td><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar.jpg?func=crop&w=320&h=240&v2"></p></td>
+</tr>
+<tr>																		   
+<td><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar2.jpg?func=crop&w=320&h=240&v2"></p></td>
+<td><p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdapur.jpg?func=crop&w=320&h=240&v2"></p></td>
+</tr>
 </div>
-
-
-
-
-
 <p><strong>Harga Sewa 1 Rumah 2 Lantai : 700.000/malam (maximal 10 orang)</strong></p>
 
 
