--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -534,6 +534,8 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 </ul>
 <p></p>
 </div>
+<ul class="staff-list">
+<li class="staff">
 <div class="staff-details">
 <ul class="staff-info">
 <li><h3>KAMAR DELUXE</h3></li>
