--- a/index.html
+++ b/index.html
@@ -352,7 +352,14 @@ span.wave {
   content: "";
   display: table;
 }
+img {
+    transition:transform 0.25s ease;
+}
 
+img:hover {
+    -webkit-transform:scale(2.5);
+    transform:scale(2.5);
+}	     	       
 </style>
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" href="/touch-icon.png" sizes="192x192" />
