--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -367,6 +367,14 @@ h1  { text-decoration: underline ;
     }
 h3  { text-decoration: underline overline;
     }
+img {
+    transition:transform 0.25s ease;
+}
+
+img:hover {
+    -webkit-transform:scale(2.5);
+    transform:scale(2.5);
+}	     	       
 </style>
 <section class="main">
 <div class="container" data-cms-content-wrapper="/_layouts/default.html">
