--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -493,16 +493,16 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 <div class="staff-bio">
 <table>
 <tr>
-<td align="center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdepan.jpg?func=crop&w=320&h=240&v2"></td>
-<td align="center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghtamu.jpg?func=crop&w=320&h=240&v2"></td>
+<td style="text-align: center;"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdepan.jpg?func=crop&w=320&h=240&v2"></td>
+<td style="text-align: center;"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghtamu.jpg?func=crop&w=320&h=240&v2"></td>
 </tr>
 <tr>																		  
-<td align="center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkluarga.jpg?func=crop&w=320&h=240&v2"></td>
-<td align="center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar.jpg?func=crop&w=320&h=240&v2"></td>
+<td style="text-align: center;"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkluarga.jpg?func=crop&w=320&h=240&v2"></td>
+<td style="text-align: center;"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar.jpg?func=crop&w=320&h=240&v2"></td>
 </tr>
 <tr>																		   
-<td align="center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar2.jpg?func=crop&w=320&h=240&v2"></td>
-<td align="center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdapur.jpg?func=crop&w=320&h=240&v2"></td>
+<td style="text-align: center;"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkamar2.jpg?func=crop&w=320&h=240&v2"></td>
+<td style="text-align: center;"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdapur.jpg?func=crop&w=320&h=240&v2"></td>
 </tr>
 </table>																		   
 </div>
