--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -491,10 +491,11 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 </ul>
 </div>
 <div class="staff-bio">
-<table>
+<table style="width:100%;">
+<tbody>
 <tr>
-<td style="text-align: center;"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdepan.jpg?func=crop&w=320&h=240&v2"></td>
-<td style="text-align: center;"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghtamu.jpg?func=crop&w=320&h=240&v2"></td>
+<td align="center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghdepan.jpg?func=crop&w=320&h=240&v2"></td>
+<td align="center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghtamu.jpg?func=crop&w=320&h=240&v2"></td>
 </tr>
 <tr>																		  
 <td style="text-align: center;"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/ghkluarga.jpg?func=crop&w=320&h=240&v2"></td>
