--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -478,7 +478,9 @@ img:hover {
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <p class="editable" data-cms-source="/penginapan/index.html" data-cms-index="0">
 Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari penginapan. Di Bening Guest House kami menyediakan kamar dan rumah dengan&nbsp; harga permalam mulai dari 125 ribu saja dan bisa kamu booking juga via aplikasi Traveloka!
-</p><hr>
+</p>
+<article class="content" data-cms-content-wrapper="/_layouts/page.html">								       
+									       <hr>
 <h3>Daftar Rumah & Kamar Murah Bening Guest House</h3>
 
 
