--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -554,7 +554,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 
 
 <div class="staff-bio">
-<p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a82fb5c8e-e1560855835374.jpg?func=crop&w=150&h=113&v2" alt="kamar deluxe" class="center"></p>
+<img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a82fb5c8e-e1560855835374.jpg?func=crop&w=150&h=113&v2" alt="kamar deluxe" class="center">
 </div>
 
 
@@ -588,7 +588,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 
 <div class="staff-bio">
 <p><blockquote></p>
-  <p style="text-align:center"><img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a8a3a357f-e1561076685884.jpg?func=crop&w=150&h=113&v2" alt="kamar standar"></p>
+<img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a8a3a357f-e1561076685884.jpg?func=crop&w=150&h=113&v2" alt="kamar standar">
 </blockquote>
 
 
