--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -543,7 +543,8 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 </ul>
 </div>
 <p></p>
-<ul class="staff-list">
+
+<li class="staff">
 <div class="staff-details">
 <ul class="staff-info">
 <li><h3>KAMAR DELUXE</h3></li>
