--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -541,8 +541,10 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
     <h4 id="garasi">•Garasi</h4>
   </li>
 </ul>
-</div>
+
 <p></p>
+<ul class="staff-list">
+<li class="staff">
 <div class="staff-details">
 <ul class="staff-info">
 <li><h3>KAMAR DELUXE</h3></li>
@@ -573,6 +575,8 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
     <h4 id="extra-time--rp-15000-per-jam-selama-persediaan-kamar-masih-ada">•Extra Time : Rp. 15.000 per jam (selama persediaan kamar masih ada)</h4>
   </li>
 </ul>
+<ul class="staff-list">
+<li class="staff">
 <div class="staff-details">
 <ul class="staff-info">
 <br>
@@ -609,6 +613,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 </ul>
 </li>
 </ul>
+</div>
 </article>
 </head></html>
 </div>
