--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -589,9 +589,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 <p><blockquote></p>
 <img src="https://ayzeapykfq.cloudimg.io/v7/beningabaditransport.com/uploads/content-5b18a8a3a357f-e1561076685884.jpg?func=crop&w=150&h=113&v2" alt="kamar standar">
 </blockquote>
-
-
-</p><p><strong>Harga Sewa : Rp.125.000 / Malam (harga untuk 2 orang)</strong></p>
+<p><strong>Harga Sewa : Rp.125.000 / Malam (harga untuk 2 orang)</strong></p>
 
 
 <ul>
