--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ img:hover {
 	</div>
 <h4 style="text-align:center;"><q>Rental Motor Mulai <span class="stabilo">70rb/Hari</span> | Sewa Mobil Mulai <span class="stabilo">250rb/Hari</span> | Penginapan Mulai <span class="stabilo">125rb/Malam</span></q><br><hr><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h4><hr>
 
-<p style="text-align:center;">Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta dan lokasi yang terdekat UGM dan UNY.</p><hr>
+<p style="text-align:center;">Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta dan lokasi yang terdekat UGM dan UNY Jogja.</p><hr>
 
 
 </div>
