--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -477,7 +477,7 @@ img:hover {
 </div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <p class="editable" data-cms-source="/penginapan/index.html" data-cms-index="1">
-Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil tapi mobil lagi mondok di bengkel,ya udah ngerental aja di Bening Abadi,mulai dari 250 rebu doank :)
+Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil tapi mobil lagi mondok di bengkel,ya udah ngerental aja di Bening Abadi,mulai dari 250 rebu doank terus tempatnya terdekat dengan UGM dan UNY Jogja lo :) 
 </p>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <h3>Daftar Rental Mobil Jogja</h3>
