--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -383,7 +383,7 @@ img:hover {
 </div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <p class="editable" data-cms-source="/penginapan/index.html" data-cms-index="1">
-Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga sewa mulai dari 70 ribu rupiah lo!! Dan lokasinya terdekat dengan UGM dan UNYY Jogja !!!Ga pake ribet dah pokoknya..!!
+Butuh motor cepet bro!! Buruan telepon ato wa ke bening abadi transport! Harga sewa mulai dari 70 ribu rupiah lo!! Dan lokasinya terdekat dengan UGM dan UNY Jogja !!!
 </p>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 	<h3>Daftar Rental Motor Jogja</h3>
