--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 	<head>
 <script src="https://www.googleoptimize.com/optimize.js?id=OPT-TG8TR64"></script>
 	<!-- Global Site Tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZKF9S1JY5P"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3LK8KSCRSR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-ZKF9S1JY5P');
+  gtag('config', 'G-3LK8KSCRSR');
 </script>	
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
