--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -563,13 +563,13 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
     <h4 id="cek-in--1300-wib-cek-out--1200-wib">√Cek In : 13.00 WIB √Cek Out : 12.00 WIB</h4>
   </li>
   <li>
-    <h4 id="fasilitas--ac-tv-bed-free-wifi-coffe-kamar-mandi-dalam-air-panas">•Fasilitas : AC, TV, Bed, Free Wifi, Coffe, Kamar Mandi Dalam (Air Panas)</h4>
+    <h4 id="fasilitas--ac-tv-bed-free-wifi-coffe-kamar-mandi-dalam-air-panas">•Fasilitas : AC, TV, Bed, Free Wifi, Welcome Drink, Kamar Mandi Dalam (Air Panas)</h4>
   </li>
   <li>
     <h4 id="extra-bedperson--rp-25000--malam">•Extra Bed/person : Rp 100.000 / Malam</h4>
   </li>
   <li>
-    <h4 id="extra-time--rp-15000-per-jam-selama-persediaan-kamar-masih-ada">•Extra Time : Rp. 15.000 per jam (selama persediaan kamar masih ada)</h4>
+    <h4 id="extra-time--rp-15000-per-jam-selama-persediaan-kamar-masih-ada">•Extra Time : Rp. 25.000 per jam (selama persediaan kamar masih ada)</h4>
   </li>
 </ul>
 <ul class="staff-list">
@@ -592,7 +592,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
     <h4 id="cek-in--1300-wib-cek-out--1200-wib">√Cek In : 13.00 WIB √Cek Out : 12.00 WIB</h4>
   </li>
   <li>
-    <h4 id="fasilitas--ac-tv-bed-free-wifi-coffe-kamar-mandi-luar">•Fasilitas : AC, TV, Bed, Free Wifi, Coffe, Kamar Mandi Luar</h4>
+    <h4 id="fasilitas--ac-tv-bed-free-wifi-coffe-kamar-mandi-luar">•Fasilitas : AC, TV, Bed, Free Wifi, Welcome Drink, Kamar Mandi Luar</h4>
   </li>
   <li>
     <h4 id="extra-bedperson--rp-25000--malam">•Extra Bed/person : Rp 100.000 / Malam</h4>
