--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -475,7 +475,7 @@ img:hover {
 </div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
 <p class="editable" data-cms-source="/penginapan/index.html" data-cms-index="0">
-Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari penginapan. Di Bening Guest House kami menyediakan kamar yang terdekat dengan UGM dan UNY jogja, lalu homestay dengan&nbsp; harga permalam mulai dari 125 ribu saja dan bisa kamu booking juga via aplikasi Traveloka!
+Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari penginapan. Di Bening Guest House kami menyediakan kamar yang terdekat dengan UGM dan UNY jogja, lalu kamar dan homestay dengan&nbsp; harga permalam mulai dari 150 ribu saja dan bisa kamu booking juga via aplikasi Traveloka!
 </p>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">								       
 									      
