--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -3,7 +3,7 @@
 <head>
 <script src="https://www.googleoptimize.com/optimize.js?id=OPT-TG8TR64"></script>
 	<!-- Global Site Tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3LK8KSCRSR"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131533286-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
