--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -9,7 +9,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-3LK8KSCRSR');
+  gtag('config', 'UA-131533286-1');
 </script>	
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
