--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -3,6 +3,14 @@
 <head>
 <script src="https://www.googleoptimize.com/optimize.js?id=OPT-TG8TR64"></script>
 	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+script-src https://www.googleanalytics.com https://www.google-analytics.com https://www.googleoptimize.com 'unsafe-inline';
+style-src 'unsafe-inline'; 
+img-src https://www.google-analytics.com https://www.googletagmanager.com
+script-src https://optimize.google.com 'unsafe-inline';
+style-src https://optimize.google.com https://fonts.googleapis.com 'unsafe-inline';
+img-src https://optimize.google.com;
+font-src https://fonts.gstatic.com;
+frame-src https://optimize.google.com
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131533286-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
