--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -19,7 +19,7 @@
 <meta property="og:title" content="Penginapan Murah Jogja" />
 <meta property="og:locale" content="id_ID" />
 <meta name="description" content="Penginapan Murah Jogja Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau" />
-<meta property="og:site_name" content="Bening Abadi Transport Website" /> 
+<meta property="og:site_name" content="Bening Abadi Transport Guest House " /> 
 <meta property="og:description" content="Penginapan Murah Jogja Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="http://beningabaditransport.com/uploads/logo-bening.png" />
