--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -19,7 +19,7 @@
 <meta property="og:title" content="Rental Mobil Yogyakarta" />
 <meta property="og:locale" content="id_ID" />
 <meta name="description" content="Rental Mobil Jogja Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau" />
-<meta property="og:site_name" content="Bening Abadi Transport Website" /> 
+<meta property="og:site_name" content="Bening Abadi Transport Sewa Mobil Yogyakarta" /> 
 <meta property="og:description" content="Rental Mobil Jogja Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="http://beningabaditransport.com/uploads/logo-bening.png" />
