--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <meta property="og:title" content="WA 0818-267-443 | Rental Motor & Sewa Mobil Jogja | Penginapan Murah Yogyakarta" />
 <meta property="og:locale" content="id_ID" />
 <meta name="description" content="Rental Motor Sewa Mobil Jogja Penginapan Murah Yogyakarta Lokasi terdekat UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau" />
-<meta property="og:site_name" content="Bening Abadi Transport Website" /> 
+<meta property="og:site_name" content="Bening Abadi Transport Sewa Motor Rental Mobil Penginapan Yogyakarta" /> 
 <meta property="og:description" content="Rental Motor Sewa Mobil Jogja Penginapan Murah Yogyakarta Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="https://ayzeapykfq.cloudimg.io/v7/raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/logo-bening.png?&v2" />
