--- a/index.html
+++ b/index.html
@@ -1305,11 +1305,12 @@ ul.slide {
 
 					<ul class="footer-links">
 					<li><b>Syarat Dan Ketentuan Berlaku</b><br />
- - Jam Operasional 09.00 – 22.00 WIB<br />
+- Jam Operasional 09.00 – 22.00 WIB<br />
 <p>- Pengantaran dan pengambilan mobil/motor mulai jam 09.00-21.00 WIB.              Diluar  jam diatas bisa langsung datang ke garasi kami.</p><br />
 - 3 Tanda pengenal/ID (KTP,NPWP,SIM,PASPORT,ID KERJA,BPJS)<br />
 - No Telp HP customer yang bisa dihubungi<br />
-- Tanpa uang jaminan<br />
+- Semua booking mobil lepas kunci dan motor adalah untuk pemakaian kendaraan di dalam area DIY<br />
+- Semua pemesanan tanpa DP adalah bersifat tidak mengikat<br />
 - Overtime 10% per jam dari Tarif Sewa<br />
 <b> - Saat hari High Season harga berbeda dengan harga hari normal</b></li>
 					</ul>
