--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ img:hover {
 <i><h1>WA 0818-267-443 / Rental Motor Sewa Mobil Jogja Penginapan Murah Yogyakarta</h1></i>
 </a><hr>
 	</div>
-<h4 style="text-align:center;"><q>Rental Motor Mulai <span class="stabilo">70rb/Hari</span> | Sewa Mobil Mulai <span class="stabilo">250 rb/Hari</span> | Penginapan Mulai <span class="stabilo">165 rb/Malam</span></q><br><hr><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h4><hr>
+<h4 style="text-align:center;"><q>Rental Motor Mulai <span class="stabilo">70 Rb/Hari</span> | Sewa Mobil Mulai <span class="stabilo">250 Rb/Hari</span> | Penginapan Mulai <span class="stabilo">165 Rb/Malam</span></q><br><hr><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h4><hr>
 
 <p style="text-align:center;">Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta dan lokasi yang terdekat UGM dan UNY Jogja.</p><hr>
 
