--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -70,7 +70,7 @@ h1 { font-size: 3.2rem; line-height: 30px; margin: 0 -1px 0 0; }
 h2 { font-size: 4rem; text-align: center; } 
 
 
-h3 { font-size: 1.9rem; }
+h3 { font-size: 1.9rem; text-align: center; }
 
 
 h4 { font-size: 1.8rem; }
