--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -486,7 +486,7 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 <div class="staff-details">
 <ul class="staff-info">
 <li><h3 text-align:"center">HOMESTAY</h3></li>
-<li><p text-align:"center" style="color:red">700 Ribu Per Malam</p></li>
+<li><p style="color:red" "text-align:center">700 Ribu Per Malam</p></li>
 </ul>
 </div>
 <div class="staff-bio">
