--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -485,8 +485,8 @@ Dateng ke jogja ga punya temen ato sodara buat menginap, yah terpaksa deh cari p
 <li class="staff">
 <div class="staff-details">
 <ul class="staff-info">
-<li><h3 text-align:"center">HOMESTAY</h3></li>
-<li><p style="color:red" "text-align:center">700 Ribu Per Malam</p></li>
+<li><h3>HOMESTAY</h3></li>
+<li><p style="color:red text-align:center">700 Ribu Per Malam</p></li>
 </ul>
 </div>
 <div class="staff-bio">
